--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@rainbow-me/rainbowkit": "^2.2.8",
+    "@tanstack/react-query": "^5.89.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.1"
+    "react-router-dom": "^7.9.1",
+    "viem": "2.x",
+    "wagmi": "^2.16.9"
   },
   "devDependencies": {
     "@eslint/css": "^0.11.0",
