--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@rainbow-me/rainbowkit": "^2.2.8",
     "@tanstack/react-query": "^5.89.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^7.9.1",
     "viem": "2.x",
-    "wagmi": "^2.16.9"
+    "wagmi": "^2.16.9",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/css": "^0.11.0",
